# cpp-result

./: CMakeLists.txt  README.md
source/: result.h  test-result.cc
